Implemented BasicGenomeReader to read the genome using a scanner and process queries using the main thread